--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+html{
+    overflow-x: hidden;
+}
+
+body{
+    text-align: center;
+}
 /******************************************************************/
 /*                                                                */
 /*                           NavBar                               */
@@ -22,6 +29,7 @@ nav{
 .navlink:hover{
     color: cadetblue;
     background-color: aquamarine;
+    text-decoration: none;
 }
 
 /******************************************************************/
@@ -32,5 +40,48 @@ nav{
 
 h1{
     text-align: center;
-    text-decoration: double;
+    margin-bottom: 6vh !important;
+}
+
+.formInsert{
+    background-color: rgba(110, 110, 129, 0.281);
+    border-radius: 13px;
+    margin-left: 25vw;
+    margin-right: 25vw; 
+    padding-bottom: 2vh;   
+    padding-top: 2vh;
+}
+
+form{
+    text-align: center;
+}
+
+.tA_Left{
+    text-align: left;
+}
+
+button{
+    background-color: cadetblue;
+    border-radius: 13px !important;
+    border: none;
+    color: aquamarine;
+    padding: 5px 10px;
+}
+
+button:hover{
+    background-color: aquamarine;
+    color: cadetblue;   
+}
+
+.Myshadow{
+    box-shadow: rgba(95, 158, 160, 0.651) 1px 0 10px !important;
+}
+
+.divForm{
+    background-color: rgba(182, 182, 194, 0.281);
+    border-radius: 13px;
+    padding-bottom: 10px;
+    padding-top: 5px;
+    text-align: left;
+    margin-left: 40px;
 }
