--- a/src/main/resources/templates/recherche.html
+++ b/src/main/resources/templates/recherche.html
@@ -1,18 +1,48 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <link rel="stylesheet" href="../static/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Recherche Produit - Priez Leroux</title>
+    <title>Recherche Produit - PRIEZ LEROUX</title>
 </head>
 <body>
     <nav>
-        <a href="./accueil.html" class="navlink">Ajout Données</a>
-        <a href="./recherche.html" class="navlink">Recherche Données</a>           
+        <a th:href="@{/accueil}" class="navlink">Ajout Données</a>
+        <a th:href="@{/recherche}" class="navlink">Recherche Données</a>
     </nav>
 
     <h1>RECHERCHE DE PRODUITS</h1>
+
+    <form th:action="@{/recherche}" th:object="${recherche}" method="post" class="formInsert">
+        <div class="col-3 divForm">
+            <label for="nom" class="col-6 tA_Left">Recherche par nom :</label>
+            <input type="text" id="nom" name="nom" th:field="*{nom}" />
+        </div>
+        <div class="col-12 pt-3">
+            <button type="submit" class="Myshadow">RECHERCHER</button>
+        </div>
+    </form>
+
+    <!-- Affichage des résultats de la recherche -->
+    <h2>Résultats de la recherche :</h2>
+    <table>
+        <thead>
+        <tr>
+            <th>Nom</th>
+            <th>Prix</th>
+            <th>Stock</th>
+        </tr>
+        </thead>
+        <tbody>
+        <!-- Boucle sur la liste des articles -->
+        <tr th:each="article : ${articles}">
+            <td th:text="${article.nom}"></td>
+            <td th:text="${article.prix}"></td>
+            <td th:text="${article.stock}"></td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
