--- a/src/main/resources/templates/recherche.html
+++ b/src/main/resources/templates/recherche.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <a th:href="@{/accueil}" class="navlink">Ajout Données</a>
+        <a th:href="@{/}" class="navlink">Ajout Données</a>
         <a th:href="@{/recherche}" class="navlink">Recherche Données</a>
     </nav>
 
