--- a/src/main/resources/templates/recherche.html
+++ b/src/main/resources/templates/recherche.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,300;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,600;1,800&display=swap" rel="stylesheet"> 
     <title>Recherche Produit - PRIEZ LEROUX</title>
 </head>
 <body>
@@ -13,36 +17,40 @@
         <a th:href="@{/recherche}" class="navlink">Recherche Données</a>
     </nav>
 
-    <h1>RECHERCHE DE PRODUITS</h1>
+    <div class="card divContainer">
+        <h1>RECHERCHE DE PRODUITS</h1>
 
-    <form th:action="@{/recherche}" th:object="${recherche}" method="post" class="formInsert">
-        <div class="col-3 divForm">
-            <label for="nom" class="col-6 tA_Left">Recherche par nom :</label>
-            <input type="text" id="nom" name="nom" th:field="*{nom}" />
-        </div>
-        <div class="col-12 pt-3">
-            <button type="submit" class="Myshadow">RECHERCHER</button>
-        </div>
-    </form>
+        <form th:action="@{/recherche}" th:object="${recherche}" method="post" class="formInsert">
+            <div class="col-3 divForm">
+                <label for="nom" class="col-6 tA_Left">Recherche par nom :</label>
+                <input type="text" id="nom" name="nom" th:field="*{nom}" />
+            </div>
+            <div class="col-12 pt-3">
+                <button type="submit" class="Myshadow">RECHERCHER</button>
+            </div>
+        </form>
+    </div>
 
-    <!-- Affichage des résultats de la recherche -->
-    <h2>Résultats de la recherche :</h2>
-    <table>
-        <thead>
-        <tr>
-            <th>Nom</th>
-            <th>Prix</th>
-            <th>Stock</th>
-        </tr>
-        </thead>
-        <tbody>
-        <!-- Boucle sur la liste des articles -->
-        <tr th:each="article : ${articles}">
-            <td th:text="${article.nom}"></td>
-            <td th:text="${article.prix}"></td>
-            <td th:text="${article.stock}"></td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="card divContainer mb-5">
+        <!-- Affichage des résultats de la recherche -->
+        <h2>Résultats de la recherche :</h2>
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Nom</th>
+                <th>Prix</th>
+                <th>Stock</th>
+            </tr>
+            </thead>
+            <tbody>
+            <!-- Boucle sur la liste des articles -->
+            <tr th:each="article : ${articles}">
+                <td th:text="${article.nom}"></td>
+                <td th:text="${article.prix}"></td>
+                <td th:text="${article.stock}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
